<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcba15"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="25sp"
            android:background="#ff0000"
            android:text="@string/hello_toronto"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="30sp"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingTop="25sp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingStart="30sp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="35sp"
                        android:paddingRight="35sp"
                        android:text="@string/textview_id"
                        android:textSize="20sp"

                        />

                    <EditText
                        android:id="@+id/edittext_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/edittext_id"
                        android:inputType=""
                        android:paddingLeft="35sp"
                        android:paddingRight="35sp"
                        android:importantForAutofill="no" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingStart="30sp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="35sp"
                        android:paddingRight="35sp"
                        android:text="@string/textview_name"
                        android:textSize="20sp"

                        />

                    <EditText
                        android:id="@+id/edittext_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/edittext_name"
                        android:inputType=""
                        android:paddingLeft="35sp"
                        android:paddingRight="35sp"
                        android:importantForAutofill="no" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingStart="30sp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="35sp"
                        android:paddingRight="35sp"
                        android:text="@string/textview_marks"
                        android:textSize="20sp"

                        />

                    <EditText
                        android:id="@+id/edittext_marks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/edittext_marks"
                        android:inputType=""
                        android:paddingLeft="35sp"
                        android:paddingRight="35sp"
                        android:importantForAutofill="no" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25sp"
                    android:layout_marginRight="25sp"
                    android:text="@string/button_add"
                    />

                <Button
                    android:id="@+id/button_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25sp"
                    android:layout_marginRight="25sp"
                    android:text="@string/button_view"
                    />

                <Button
                    android:id="@+id/button_find"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25sp"
                    android:layout_marginRight="25sp"
                    android:text="@string/button_find"
                    />

                <Button
                    android:id="@+id/button_delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25sp"
                    android:layout_marginRight="25sp"
                    android:text="@string/button_delete"
                    />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>